fixing link overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,6 +72,7 @@ a {
   color: currentColor;
   text-decoration-thickness: 0.2ex;
   text-underline-offset: 0.3ex;
+  max-width: 20ch;
   &:hover {
     text-underline-offset: 0.5ex;
   }
